# ClawCRM

./: .gitignore  Makefile  docker-compose.yml  nginx.conf  pyproject.toml  ruff.toml
api/: Dockerfile  deps.py  main.py
api/core/: auth.py  clerk.py  config.py  http_errors.py  loggers.py
api/db/: base.py  session.py
api/db/migrations/: env.py
api/db/migrations/versions/: 37d3b2004938_.py  96a7ef1a0d03_change_product_description.py  ab5cd89af683_.py
api/db/models/: __init__.py  product.py  product_node.py  sale.py  user.py
api/exceptions/: __init__.py  base.py  domain.py  repository.py
api/repositories/: __init__.py  base.py  product.py  product_node.py  sale.py  user.py
api/routers/: __init__.py
api/routers/v1/: product_nodes.py  products.py  sales.py  users.py
api/routers/v1/webhooks/: __init__.py
api/routes/: __init__.py  product_nodes.py  products.py
api/schemas/: __init__.py  product.py  product_node.py  sale.py  user.py
api/services/: __init__.py  product.py  product_node.py  sale.py  user.py
api/utils/: __init__.py  db.py  validators.py
web/: Dockerfile  eslint.config.js  index.html  nginx.conf  openapi-ts.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/api/: base.ts  product.ts  sale.ts
web/src/app/router/: router.tsx  (+1 more)
web/src/client/: index.ts  sdk.gen.ts  types.gen.ts
web/src/components/: AppSidebar.tsx  CategoryTree.tsx  ProductForm.tsx  ProductList.tsx  SaleForm.tsx  SalesTable.tsx
web/src/types/: product.ts
(+30 files in other folders)
