[tool.poetry]
package-mode = false

[project]
name = "crm"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitaliy", email = "vitalikfedytnyk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5,<3.0.0",
    "sqlalchemy>=2.0.48,<3.0.0",
    "uvicorn>=0.41.0",
    "alembic>=1.18.4,<2.0.0",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "clerk-backend-api (>=5.0.2,<6.0.0)",
    "svix (>=1.89.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
